# CompetitionPlatform

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/auth/: login.rs  register.rs  utils.rs
backend/src/models/: competitions.rs  mod.rs  user.rs
backend/src/routes/: auth.rs  competitions.rs  data.rs  mod.rs
backend/src/services/: competitions.rs
frontend/: package.json
frontend/src/: App.tsx  store.ts  theme.ts
frontend/src/components/auth/: login.tsx  register.tsx
frontend/src/components/footer/: footer.tsx
frontend/src/components/header/: header.tsx
frontend/src/components/pages/: competitions.tsx  dashboard.tsx  documentation.tsx  home.tsx  leaderboard.tsx
frontend/src/components/pages/components/competitions/: admin.tsx  competitor.tsx  events.tsx
frontend/src/components/pages/components/utils/: backdrop.tsx
frontend/src/slices/: auth.ts  competitions.ts
